css/style.css:: Changed styles to wrap comments and changes columns if browser  window is to small. Fixes #6051.
git-svn-id: https://trac-hacks.org/svn@6906 7322e99d-02ea-0310-aa39-e9a107903beb

--- a/watchlistplugin/0.11/tracwatchlist/htdocs/css/style.css
+++ b/watchlistplugin/0.11/tracwatchlist/htdocs/css/style.css
@@ -1,11 +1,13 @@
 table {
-    border-top: solid;
-    border-bottom: solid;
+    border-bottom: medium solid;
+    border-top: medium solid;
+    width: 100%;
+    table-layout: auto;
 }
 
 thead, th {
-    font-weight: bold;
     border-bottom: thin solid;
+    font-weight: bold;
 }
 
 th, td {
@@ -13,12 +15,17 @@ th, td {
     white-space: nowrap;
 }
 
-th.comment, th.summary, th.changes {
+th.comment, th.changes {
     text-align: left;
 }
 
-td.comment, th.summary {
+table.wikilist td.comment {
     width: 100%;
+    white-space: normal;
+}
+
+table.ticketlist td.comment, table.ticketlist td.changes {
+    white-space: normal;
 }
 
 td.version, td.commentnum, td.id {
